<resources>
    // Details Screen
    <string name="content_description_poster_image_of_movie">Poster do filme</string>
    <string name="minutes_duration_label">min</string>
    <string name="votes_count_label">votos</string>

    // Movie Item
    <string name="mock_movie_title_list">Tenacious D : The Pick of the Destiny</string>
    <string name="mock_movie_release_date_list">2002</string>
    <string name="mock_movie_genre_list">Ação, Comédia, Música, Família</string>
    <string name="mock_movie_duration_list">120 min</string>
    <string name="content_description_love_details_activity">Favorite esse filme!</string>

    // Connectivity
    <string name="snackbar_message_internet_back">Sua conexão está de volta :)</string>
    <string name="snackbar_internet_off">Sem internet! Trabalhando offline </string>
    <string name="dot_separator_date_duration">•</string>
    <string name="mock_likes_movie">123.252 likes</string>
    <string name="mock_popularity_movie">123.252</string>
    <string name="error_message_no_movies">Os filmes estão carregando, não fique triste, pipoca. \nDeslize para baixo para recarregar</string>
    <string name="retry_load_movies_button_label">Tentar Novamente</string>
    <string name="content_description_sad_popcorn_empty_list">Pipoca triste por estar carregando os filmes</string>

</resources>
