<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout
    android:id="@+id/movie_details_activity_layout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layoutDescription="@xml/collapsing_toolbar"
    tools:context="com.jsouza.moviedetail.presentation.MovieDetailsActivity">

    <com.github.florent37.shapeofview.shapes.DiagonalView
        android:id="@+id/diagonal_container_poster_detail_activity"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:shape_diagonal_angle="-10"
        app:shape_diagonal_position="bottom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHeight_percent=".2">

        <ImageView
            android:id="@+id/poster_image_view_detail_activity"
            android:layout_width="match_parent"
            android:layout_height="@dimen/default_backdrop_image_height"
            android:contentDescription="@string/content_description_poster_image_of_movie"
            android:scaleType="centerCrop"
            tools:src="@drawable/poster_mock" />

    </com.github.florent37.shapeofview.shapes.DiagonalView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/movie_details_constraint_layout_detail_activity"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/diagonal_container_poster_detail_activity"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:id="@+id/movie_date_text_view_detail_activity"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            tools:text="@string/mock_movie_release_date_list"
            android:textAllCaps="true"
            android:textAlignment="textStart"
            android:layout_marginStart="@dimen/material_default_margin_8dp"
            android:layout_marginTop="0dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            style="@style/default_movie_title"/>

        <TextView
            android:id="@+id/movie_duration_text_view_detail_activity"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            tools:text="@string/mock_movie_duration_list"
            android:textAllCaps="true"
            android:textAlignment="textStart"
            android:layout_marginStart="@dimen/material_default_margin_8dp"
            android:layout_marginTop="0dp"
            app:layout_constraintStart_toEndOf="@id/movie_date_text_view_detail_activity"
            app:layout_constraintTop_toTopOf="parent"
            style="@style/default_movie_title"/>

        <TextView
            android:id="@+id/title_movie_text_view_detail_activity"
            style="@style/default_movie_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/material_default_margin_8dp"
            android:textAlignment="viewStart"
            android:textAllCaps="true"
            android:textSize="18sp"
            app:layout_constraintEnd_toStartOf="@id/favorite_movie_toggle_button_detail_activity"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/movie_duration_text_view_detail_activity"
            tools:text="@string/mock_movie_title_list" />

        <ToggleButton
            android:id="@+id/favorite_movie_toggle_button_detail_activity"
            android:layout_width="@dimen/favorite_button_width"
            android:layout_height="@dimen/favorite_button_height"
            android:background="@drawable/toggle_favorite_button"
            android:textOff=""
            android:textOn=""
            android:layout_marginEnd="@dimen/material_default_margin_8dp"
            app:layout_constraintBottom_toBottomOf="@id/genre_movie_text_view_detail_activity"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/title_movie_text_view_detail_activity" />

        <TextView
            android:id="@+id/genre_movie_text_view_detail_activity"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/material_default_margin_8dp"
            android:layout_marginTop="@dimen/material_default_margin_8dp"
            android:layout_marginEnd="@dimen/material_default_margin_8dp"
            android:textAlignment="viewStart"
            app:layout_constraintEnd_toStartOf="@id/favorite_movie_toggle_button_detail_activity"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title_movie_text_view_detail_activity"
            tools:text="@string/mock_movie_genre_list" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/similar_recycler_view_detail_activity"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:visibility="visible"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:itemCount="2"
            tools:listitem="@layout/movie_list_item"
            android:layout_marginStart="@dimen/material_default_margin_8dp"
            android:layout_marginEnd="@dimen/material_default_margin_8dp"
            android:layout_marginTop="@dimen/material_default_margin_8dp"
            android:layout_marginBottom="@dimen/material_default_margin_8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/genre_movie_text_view_detail_activity"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.motion.widget.MotionLayout>